--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
     "react-toggle-dark-mode": "^1.1.1",
